--- a/style.css
+++ b/style.css
@@ -1,21 +1,54 @@
 @import url(./assets/fonts.ttf);
 
 body {
-  font-family: "DIN Condensed", sans-serif;
+  background-color: black;
+}
+
+.return-box {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  z-index: 9999;
+}
+
+.return-box button {
+  font-size: 2.5rem;
+  padding: 10px 70px;
+  border-radius: 20px;
+  background: #ad1482;
+  color: white;
+  font-family: Arial;
+  border: 3px solid white;
 }
 
 #screen {
   position: fixed;
   left: 0;
   top: 0;
-  right: 0;
   bottom: 0;
+  right: 0;
+}
+
+.separation-black {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
+.screen-container-step {
   background-image: url(./assets/background_0.png);
   background-size: cover;
   background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-#screen .outline {
+.screen-container-step .outline {
   position: absolute;
   left: 0;
   top: 0;
@@ -23,10 +56,10 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  pointer-events: none;
 }
 
-#screen .effects {
+.screen-container-step .background-1 {
   position: absolute;
   left: 0;
   top: 0;
@@ -34,100 +67,109 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  pointer-events: none;
 }
 
-.title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  margin-top: 40px;
+.screen-container-step .effects {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
 
-.button {
-  width: 11rem;
-  height: 11rem;
-  border: none;
-  background: orange;
-  color: white;
+.screen-container-step .logo {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 12%;
+  margin: 7%;
+  z-index: 8000;
 }
 
-.main-button {
-  margin-top: 10rem;
+.screen-container-step .card-creative {
+  margin: 11% 9%;
+  margin-top: 6%;
+  z-index: 99;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
 
-.indicator-domain {
-  width: 5rem;
-  height: 5rem;
-  background-color: orange;
-}
-.category-formation {
-  text-align: center;
-  font-size: 25px;
-  background: orange;
-  border-radius: 30px;
-  margin-bottom: 20px;
-  color: white;
-  padding: 10px 0px;
+.screen-container-step .step-title {
+  width: 90%;
+  margin: 0 auto;
 }
 
-.screen-page-content {
+.screen-container-step .step-content {
   display: none;
+  position: relative;
 }
 
-.keyboard {
-}
-
-.input-form.focus {
-  border: 2px solid red;
-}
-
-.input-form {
-  outline: none !important;
-    font-size: 45px;
-    text-align: center;
-    font-weight: 300;
-    border-radius: 60px;
-    color: #1a1a5a;
-    padding: 20px;
-}
-
-.card-formation {
-  background-image: url(./assets/page2/card.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
+.screen-container-step .card-formation {
   width: 85%;
   height: 77%;
   margin: 4% auto;
-  margin-top: 10%;
+  margin-top: 5%;
+  position: relative;
 }
 
-.logo {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 10rem;
-  height: 10rem;
-  margin: 8%;
+.screen-container-step .card-formation .card-background {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
-.form-background {
-  background-image: url(./assets/page4/card.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  padding: 30px;
-  margin: 30px;
-  height: 50rem;
+.screen-container-step .formationType .isdqA80ds {
+  width: 53%;
+  transform: scale(1.6);
 }
 
-.img-title {
-  margin-top: 10%;
-  padding: 0 5%;
+.screen-container-step .formationCenter .s51A91dz {
+  width: 100%;
+  transform: scale(1.1);
 }
 
-.isdqA80ds {
-  width: 62%;
+.screen-container-step form {
+  position: relative;
 }
 
-.s51A91dz {
-  width: 50%;
+.screen-container-step form img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.15);
+  z-index: -1;
+}
+
+.screen-container-step form input {
+  outline: none !important;
+  font-size: 57px;
+  text-align: center;
+  font-weight: 300;
+  border-radius: 60px;
+  color: #1a1a5a;
+  padding: 3px;
+}
+
+.screen-container-step form input.focus {
+  box-shadow: 0px 0px 20px 1px #ffffff;
+}
+
+.screen-container-step form input:not(:last-child) {
+  margin-bottom: 27px;
+}
+
+#keyboard {
+  margin-top: 40px;
 }
