--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url(./assets/fonts.ttf);
 
+:root {
+  --separation:5px
+}
+
 body {
   background-color: black;
 }
@@ -104,6 +108,7 @@ body {
 .screen-container-step .step-title {
   width: 90%;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .screen-container-step .step-content {
@@ -122,15 +127,17 @@ body {
 .screen-container-step .card-formation .card-background {
   position: absolute;
   left: 50%;
-  top: 50%;
-  width: 130%;
+  top: 52%;
+  width: 110%;
   transform: translate(-50%, -50%);
   z-index: -1;
 }
 
 .screen-container-step .formationType .isdqA80ds {
+  --scale-value:1.9;
+  --translateZ-value: 0px;
   width: 77%;
-  transform: scale(1.8);
+  transform: scale(var(--scale-value)) translateX(var(--translateZ-value));
 }
 
 .screen-container-step .formationCenter .s51A91dz {
